force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <label>Work Item</label>
    <pluralLabel>Work Items</pluralLabel>
    <nameField>
        <label>Work Item ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>