force-app/main/default/objects/Work_Item__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <label>Contributor</label>
    <type>Lookup</type>
    <referenceTo>Contributor__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
</CustomField>