force-app/main/default/objects/Work_Item__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Lookup</type>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
</CustomField>