force-app/main/default/objects/Work_Item__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <type>Lookup</type>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Repositorys</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
</CustomField>