force-app/main/default/objects/Work_Item__c/fields/Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Name__c</fullName>
    <label>Sprint Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>