force-app/main/default/objects/Work_Item__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <label>Story Points</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>