force-app/main/default/objects/Work_Item__c/fields/Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Type__c</fullName>
    <label>Work Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Spike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>